--- a/2-html-css/css/style2.css
+++ b/2-html-css/css/style2.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 body{
     background-color: #000000; 
     color: #F6F6F6; 
@@ -31,4 +32,48 @@ do elemento, ambas com valor igual à 0.
 *{
     margin: 0;
     padding: 0;
+}
+
+/* usando flexbox*/
+.apresentacao{
+    display: flex;
+    /*por padrão, os elementos ficam um do lado do outro*/
+    align-items: center;
+    /*os elementos são alinhados no centro*/
+    justify-content: space-between;
+    /*cria-se um espaço entre os elementos,
+    os mais na ponta ficam o mais distante possível*/
+    margin: 10%;
+}
+
+.apresentacao-conteudo{
+    width: 615px;
+}
+
+.apresentacao-conteudo-titulo{
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+
+.apresentacao-conteudo-texto{
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.apresentacao-conteudo-links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao-conteudo-links-link{
+    background-color: #22d4fd;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration:  none;
+    color:#000000;
+    font-family: 'Montserrat', sans-serif;
 }
