--- a/3-html-css/style.css
+++ b/3-html-css/style.css
@@ -55,6 +55,11 @@ body{
 
 .apresentacao__links__link{
     /* background-color: #22D4FD; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+
     width: 378px;
     text-align: center;
     border-radius: 8px;
@@ -65,4 +70,5 @@ body{
     color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
     border: 2px solid #22D4FD;
+
 }
