--- a/3-html-css/style.css
+++ b/3-html-css/style.css
@@ -72,3 +72,8 @@ body{
     border: 2px solid #22D4FD;
 
 }
+
+.apresentacao__links__link:hover{
+    background-color: #272727;
+    color: #22D4FD;
+}
