--- a/4-html-css/css/style.css
+++ b/4-html-css/css/style.css
@@ -44,9 +44,10 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -87,7 +88,7 @@ body{
     align-items: center;
     gap: 16px;
 
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
@@ -103,6 +104,10 @@ body{
 .apresentacao__links__link:hover{
     background-color: var(--cor-hover);
     color: var(--cor-terciaria);
+}
+
+.apresentacao-imagem{
+    width: 50%;
 }
 
 .rodape{
