--- a/5-praticando/css/style.css
+++ b/5-praticando/css/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 :root{
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --fonte-secundaria: 'Inter', sans-serif;
 }
 
 body{
@@ -23,4 +26,14 @@ body{
 
 .conteiner{
     height: 100vh;
+}
+
+.conteiner-botao{
+    background-color: var(--botao-azul);
+    border-radius: 8px;
+    padding: 1em;
+    text-decoration: none;
+    color: var(--branco-principal);
+    font-family: var(--fonte-secundaria);
+    display: block;
 }
